# insight-vector

./: README.md  environment.yml  hello.py  pyproject.toml
app/: 0_Search.py
data/chroma/996c69a0-eac5-4042-b4f0-f374695dd68a/: index_metadata.pickle
notebooks/: 0_data-download.ipynb
