[project]
name = "insight-vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.58.1",
    "praw>=7.8.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1",
]
